--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -1,1 +1,72 @@
-<p>edit-recipe works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="submit" class="btn btn-success" [disabled]="recipeForm.invalid">Save</button>
+          <button type="button" class="btn btn-danger" (click)="backRecipesList()">Cansel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" formControlName="name" type="text" class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL</label>
+            <input
+              id="imagePath"
+              formControlName="imagePath"
+              type="text"
+              class="form-control"
+              #imagePath
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img class="img-responsive" [src]="imagePath.value" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea id="Description" formControlName="description" rows="6" class="form-control">
+            </textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients" >
+          <label>Ingredients</label>
+          <div class="row" style="margin-top: 7px"
+               *ngFor="let ingredient of controls; let i = index"
+               [formGroupName]="i"
+          >
+            <div class="col-xs-8">
+              <input type="text" formControlName="name" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <input type="number" formControlName="amount" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add Ingredient</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
